# PAWS

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/utils/: EnvironmentManager.cpp  EnvironmentManager.h  logger.cpp  logger.h  logger.hpp  mpi_manager.cpp  mpi_manager.h  utils.hpp
